--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,8 @@
     <color name="eblue60">#0285BE</color>
     <color name="eblue80">#00578A</color>
 
+
+    <color name="egray20">#F8F8F8</color>
     <color name="egray30">#D3D3D3</color>
     <color name="egray40">#B2B2B2</color>
     <color name="egray50">#929292</color>
