--- a/app/src/main/res/layout/fragment_like.xml
+++ b/app/src/main/res/layout/fragment_like.xml
@@ -28,11 +28,11 @@
                 android:id="@+id/my_favorite_txt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/dp_34"
-                android:text="Hi"
+                android:textSize="@dimen/dp_28"
+                android:text="관심 목록"
+                android:textColor="@color/egray80"
                 android:layout_marginTop="@dimen/dp_50"
-                android:fontFamily="@font/lexend_deca"
-                android:textStyle="bold"
+                android:fontFamily="@font/nanum_barun_gothic_bold"
                 app:autoSizeTextType="uniform"
                 app:autoSizeMaxTextSize="34sp"
                 app:autoSizeMinTextSize="20sp"
