--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,35 +28,34 @@
         app:layout_constraintGuide_percent=".9"/>
 
 
-
-
-
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/hello_txt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/dp_34"
-        android:text="Hi"
-        android:layout_marginTop="@dimen/dp_50"
+        android:layout_marginTop="44dp"
         android:fontFamily="@font/lexend_deca"
+        android:text="Home"
+        android:textSize="@dimen/dp_34"
         android:textStyle="bold"
-        app:autoSizeTextType="uniform"
         app:autoSizeMaxTextSize="34sp"
         app:autoSizeMinTextSize="20sp"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="@id/guideline_right"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.zhpan.bannerview.BannerViewPager
         android:id="@+id/banner_view"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_160"
         android:layout_marginTop="@dimen/dp_20"
-        app:bvp_indicator_visibility="visible"
-        app:bvp_indicator_slide_mode="worm"
         app:bvp_indicator_radius="@dimen/dp_4"
+        app:bvp_indicator_slide_mode="worm"
         app:bvp_indicator_style="round_rect"
-        app:layout_constraintTop_toBottomOf="@id/hello_txt"/>
+        app:bvp_indicator_visibility="visible"
+        app:layout_constraintTop_toBottomOf="@id/hello_txt"
+        tools:layout_editor_absoluteX="125dp" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -201,7 +200,6 @@
         android:clipChildren="true"
         android:clipToPadding="true"
         android:paddingTop="10dp"
-
         android:paddingBottom="10dp"
         android:layout_marginBottom="300dp"
         app:layout_constraintTop_toBottomOf="@id/today_txt"
