--- a/app/src/main/res/layout/item_cart_list.xml
+++ b/app/src/main/res/layout/item_cart_list.xml
@@ -12,6 +12,7 @@ too. layout_gravity="center_horizontal" is a lot simpler.
         <variable
             name="prdlist"
             type="com.esteel4u.realtimeauctionapp.data.model.ProductData"/>
+
     </data>
 
     <FrameLayout
@@ -42,18 +43,7 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <com.varunest.sparkbutton.SparkButton
-                    android:id="@+id/spark_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:sparkbutton_activeImage="@drawable/ic_heart_on"
-                    app:sparkbutton_iconSize="@dimen/dp_15"
-                    app:sparkbutton_inActiveImage="@drawable/ic_heart_off"
-                    android:layout_gravity="right"
 
-                    android:layout_marginTop="@dimen/dp_8"
-                    app:sparkbutton_primaryColor="@color/lmint10"
-                    app:sparkbutton_secondaryColor="@color/lblue30" />
                 <!--
                 scale_container is used to scale down the item when the scale down
                 animation happens. card_container re-sizes height and width while
@@ -70,15 +60,15 @@ too. layout_gravity="center_horizontal" is a lot simpler.
 
 
 
-<!--                    <ImageView-->
-<!--                        android:id="@+id/chevron"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_alignTop="@+id/prd_auction_type"-->
-<!--                        android:layout_alignBottom="@+id/prd_totseqNm"-->
-<!--                        android:layout_marginEnd="16dp"-->
-<!--                        app:srcCompat="@drawable/ic_round_keyboard_arrow_left_24"-->
-<!--                        app:tint="@color/lblue60" />-->
+                    <!--                    <ImageView-->
+                    <!--                        android:id="@+id/chevron"-->
+                    <!--                        android:layout_width="wrap_content"-->
+                    <!--                        android:layout_height="wrap_content"-->
+                    <!--                        android:layout_alignTop="@+id/prd_auction_type"-->
+                    <!--                        android:layout_alignBottom="@+id/prd_totseqNm"-->
+                    <!--                        android:layout_marginEnd="16dp"-->
+                    <!--                        app:srcCompat="@drawable/ic_round_keyboard_arrow_left_24"-->
+                    <!--                        app:tint="@color/lblue60" />-->
 
                     <TextView
                         android:id="@+id/prd_auction_type"
@@ -111,26 +101,26 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:textSize="10dp" />
 
 
+                    <TextView
+                        android:id="@+id/auc_bid_txt"
+                        android:layout_width="40dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/prd_auction_type"
+                        android:layout_toLeftOf="@id/auc_bid"
+                        android:text="낙찰가 : "
+                        android:textSize="10dp" />
 
                     <TextView
-                        android:id="@+id/prd_status"
+                        android:id="@+id/auc_bid"
                         android:layout_width="40dp"
                         android:layout_height="wrap_content"
                         android:layout_alignTop="@+id/prd_auction_type"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="@dimen/dp_15"
-                        android:text="진행중"
+                        android:text="@{prdlist.bidPrice + `₩ / KG`}"
                         android:textSize="10dp" />
 
-                    <TextView
-                        android:id="@+id/prd_time"
-                        android:layout_width="40dp"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/prd_auction_type"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="@dimen/dp_15"
-                        android:text="10:00:00"
-                        android:textSize="10dp" />
+
 
 
 
@@ -138,7 +128,7 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:id="@+id/expand_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/prd_status"
+                        android:layout_below="@id/auc_bid"
                         android:layout_alignStart="@id/prd_auction_type"
                         android:layout_marginTop="20dp"
                         android:dividerPadding="1dp"
@@ -305,40 +295,6 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         </LinearLayout>
 
 
-
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:padding="14dp">
-
-
-                            <LinearLayout
-                                android:layout_weight="1"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:gravity="center">
-
-                                <com.google.android.material.button.MaterialButton
-                                    android:id="@+id/bid_button"
-                                    android:layout_height="wrap_content"
-                                    android:layout_width="@dimen/dp_250"
-                                    android:text="Place a Bid"
-                                    android:fontFamily="@font/lexend_deca"
-                                    android:textStyle="bold"
-                                    android:textColor="@color/white"
-                                    style="@style/MyButtonShapeRounded"
-                                    app:cornerRadius="30dp"
-                                    android:insetBottom="2dp"
-                                    android:insetTop="3dp"
-                                    android:textAllCaps="false"
-                                    android:backgroundTint="@color/lblue60"
-                                    android:gravity="center"/>
-
-                            </LinearLayout>
-                        </LinearLayout>
 
 
 
