--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,15 +27,36 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent=".9"/>
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_center"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".3"/>
+
+
+<!--    <ImageView-->
+<!--        android:id="@+id/logoimg"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:src="@drawable/user"-->
+<!--        android:layout_marginTop="@dimen/dp_10"-->
+<!--        app:layout_constraintStart_toStartOf="@id/guideline_left"-->
+<!--        app:layout_constraintEnd_toEndOf="@id/guideline_center"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/hello_txt"-->
+<!--        />-->
+
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/hello_txt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:fontFamily="@font/lexend_deca"
-        android:text="Home"
-        android:textSize="@dimen/dp_34"
+        android:layout_marginTop="@dimen/dp_80"
+        android:fontFamily="@font/nanum_barun_gothic"
+        android:textSize="@dimen/dp_28"
+        android:text="home"
+        android:textColor="@color/egray80"
         android:textStyle="bold"
         app:autoSizeMaxTextSize="34sp"
         app:autoSizeMinTextSize="20sp"
@@ -62,134 +83,97 @@
         android:id="@+id/type_txt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/dp_26"
-        android:text="Types"
-        android:fontFamily="@font/lexend_deca"
-        android:textStyle="bold"
+        android:textSize="@dimen/dp_28"
+        android:text="오늘의 경매"
+        android:fontFamily="@font/nanum_barun_gothic_bold"
+        android:layout_marginTop="@dimen/dp_30"
+        android:textColor="@color/egray80"
         app:autoSizeTextType="uniform"
-        app:autoSizeMaxTextSize="25sp"
+        app:autoSizeMaxTextSize="28sp"
         app:autoSizeMinTextSize="20sp"
         app:layout_constraintStart_toStartOf="@id/guideline_left"
         app:layout_constraintEnd_toEndOf="@id/guideline_right"
         app:layout_constraintTop_toBottomOf="@id/banner_view"
         />
-    <HorizontalScrollView
-        android:id="@+id/types_card_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:scrollbars="none"
-        app:layout_constraintTop_toBottomOf="@id/type_txt"
-        >
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="8dp">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="@dimen/dp_170"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                app:cardCornerRadius="15dp"
-                app:cardPreventCornerOverlap="true"
-                app:cardElevation="2dp"
-                app:cardUseCompatPadding="true">
-
-                <ImageView
-                    android:id="@+id/premium_img"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/premiumbg_n" />
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="@dimen/dp_170"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                app:cardCornerRadius="15dp"
-                app:cardPreventCornerOverlap="true"
-                app:cardElevation="2dp"
-                app:cardUseCompatPadding="true">
-
-                <ImageView
-                    android:id="@+id/auction_img"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/auctionbg_n" />
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="@dimen/dp_170"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                app:cardCornerRadius="15dp"
-                app:cardPreventCornerOverlap="true"
-                app:cardElevation="2dp"
-                app:cardUseCompatPadding="true">
-
-                <ImageView
-                    android:id="@+id/outlet_img"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/outletbg_n" />
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="@dimen/dp_170"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                app:cardCornerRadius="15dp"
-                app:cardPreventCornerOverlap="true"
-                app:cardElevation="2dp"
-                app:cardUseCompatPadding="true">
-
-                <ImageView
-                    android:id="@+id/package_img"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/packagebg_n" />
-
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
-
-    </HorizontalScrollView>
-<!--    <com.zhpan.bannerview.BannerViewPager-->
-<!--        android:id="@+id/types_card_view"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="@dimen/dp_150"-->
-<!--        android:layout_marginTop="@dimen/dp_10"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/type_txt"/>-->
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/today_txt"
+        android:id="@+id/type_txt_desc"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/dp_26"
-        android:text="Today"
-        android:fontFamily="@font/lexend_deca"
-        android:textStyle="bold"
+        android:textSize="@dimen/dp_13"
+        android:text="오늘 진행되는 경매를 한눈에 확인해 보세요!"
+        android:fontFamily="@font/nanum_barun_gothic"
+        android:layout_marginTop="@dimen/dp_5"
+        android:textColor="@color/egray60"
         app:autoSizeTextType="uniform"
-        app:autoSizeMaxTextSize="25sp"
-        app:autoSizeMinTextSize="20sp"
+        app:autoSizeMaxTextSize="28sp"
+        app:autoSizeMinTextSize="12sp"
         app:layout_constraintStart_toStartOf="@id/guideline_left"
         app:layout_constraintEnd_toEndOf="@id/guideline_right"
-        app:layout_constraintTop_toBottomOf="@id/types_card_view"
+        app:layout_constraintTop_toBottomOf="@id/type_txt"
         />
 
+    <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
+        android:id="@+id/buttongroup"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_20"
+        app:toggle_requiredAmount="0"
+        app:toggle_selectableAmount="1"
+        app:toggle_selectAnimation="circular_reveal"
+        app:layout_constraintTop_toBottomOf="@id/type_txt_desc"
+        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:justifyContent="center"> <!-- this attribute is from the underlying FlexboxLayout -->
+
+        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
+            android:id="@+id/primium_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dp_38"
+            app:toggle_backgroundColor="@color/lgray30"
+            app:toggle_btnCornerRadius="@dimen/dp_20"
+            app:toggle_selectedBackgroundColor="@color/lblue60"
+            app:toggle_selectedTextColor="@color/white"
+            app:toggle_textSize="@dimen/dp_12"
+            app:toggle_textPaddingVertical="@dimen/dp_12"
+            app:toggle_text="프리미엄"/>
+
+        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
+            android:id="@+id/auction_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="38dp"
+            app:toggle_backgroundColor="@color/lgray30"
+            app:toggle_btnCornerRadius="@dimen/dp_20"
+            app:toggle_selectedBackgroundColor="@color/lblue60"
+            app:toggle_selectedTextColor="@color/white"
+            app:toggle_textSize="@dimen/dp_12"
+            app:toggle_textPaddingVertical="@dimen/dp_12"
+            app:toggle_text="옥션"/>
+
+        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
+            android:id="@+id/outlet_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="38dp"
+            app:toggle_backgroundColor="@color/lgray30"
+            app:toggle_btnCornerRadius="@dimen/dp_20"
+            app:toggle_selectedBackgroundColor="@color/lblue60"
+            app:toggle_selectedTextColor="@color/white"
+            app:toggle_textSize="@dimen/dp_12"
+            app:toggle_textPaddingVertical="@dimen/dp_12"
+            app:toggle_text="아울렛"/>
+
+        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
+            android:id="@+id/package_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="38dp"
+            app:toggle_backgroundColor="@color/lgray30"
+            app:toggle_btnCornerRadius="@dimen/dp_20"
+            app:toggle_selectedBackgroundColor="@color/lblue60"
+            app:toggle_selectedTextColor="@color/white"
+            app:toggle_textSize="@dimen/dp_12"
+            app:toggle_textPaddingVertical="@dimen/dp_12"
+            app:toggle_text="패키지"/>
+
+    </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -202,8 +186,10 @@
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:layout_marginBottom="300dp"
-        app:layout_constraintTop_toBottomOf="@id/today_txt"
+        app:layout_constraintTop_toBottomOf="@id/buttongroup"
         tools:listitem="@layout/item_product_list"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
