--- a/app/src/main/res/layout/item_product_list.xml
+++ b/app/src/main/res/layout/item_product_list.xml
@@ -84,8 +84,8 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:id="@+id/prd_auction_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/lexend_deca"
-                        android:text="Primium"
+                        android:fontFamily="@font/nanum_barun_gothic"
+                        android:text="프리미엄"
                         android:textSize="13dp" />
 
                     <TextView
@@ -103,9 +103,9 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:id="@+id/prd_totseqNm"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toRightOf="@id/prd_auction_type"
                         android:layout_alignBottom="@id/prd_auction_type"
                         android:layout_marginLeft="@dimen/dp_5"
+                        android:layout_toRightOf="@id/prd_auction_type"
                         android:fontFamily="@font/lexend_deca"
                         android:text="주무뇌"
                         android:textSize="10dp" />
