--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,9 +53,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_80"
-        android:fontFamily="@font/nanum_barun_gothic"
+        android:fontFamily="@font/lexend_deca"
         android:textSize="@dimen/dp_28"
-        android:text="home"
+        android:text="Home"
         android:textColor="@color/egray80"
         android:textStyle="bold"
         app:autoSizeMaxTextSize="34sp"
@@ -66,6 +66,23 @@
         app:layout_constraintStart_toStartOf="@id/guideline_left"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/hello_txt_desc"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/dp_12"
+        android:text="No 1. Quality 철강 e-Marketplace 거래로 시작하세요."
+        android:fontFamily="@font/nanum_barun_gothic"
+        android:layout_marginTop="@dimen/dp_5"
+        android:textColor="@color/egray60"
+        app:autoSizeTextType="uniform"
+        app:autoSizeMaxTextSize="28sp"
+        app:autoSizeMinTextSize="12sp"
+        app:layout_constraintStart_toStartOf="@id/guideline_left"
+        app:layout_constraintEnd_toEndOf="@id/guideline_right"
+        app:layout_constraintTop_toBottomOf="@id/hello_txt"
+        />
+
     <com.zhpan.bannerview.BannerViewPager
         android:id="@+id/banner_view"
         android:layout_width="match_parent"
@@ -75,7 +92,7 @@
         app:bvp_indicator_slide_mode="worm"
         app:bvp_indicator_style="round_rect"
         app:bvp_indicator_visibility="visible"
-        app:layout_constraintTop_toBottomOf="@id/hello_txt"
+        app:layout_constraintTop_toBottomOf="@id/hello_txt_desc"
         tools:layout_editor_absoluteX="125dp" />
 
 
@@ -83,7 +100,7 @@
         android:id="@+id/type_txt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/dp_28"
+        android:textSize="@dimen/dp_25"
         android:text="오늘의 경매"
         android:fontFamily="@font/nanum_barun_gothic_bold"
         android:layout_marginTop="@dimen/dp_30"
@@ -100,7 +117,7 @@
         android:id="@+id/type_txt_desc"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/dp_13"
+        android:textSize="@dimen/dp_12"
         android:text="오늘 진행되는 경매를 한눈에 확인해 보세요!"
         android:fontFamily="@font/nanum_barun_gothic"
         android:layout_marginTop="@dimen/dp_5"
