--- a/app/src/main/res/layout/item_cart_list.xml
+++ b/app/src/main/res/layout/item_cart_list.xml
@@ -29,9 +29,9 @@ too. layout_gravity="center_horizontal" is a lot simpler.
             android:layout_gravity="center_horizontal"
             android:orientation="vertical"
             app:cardCornerRadius="10dp"
-            app:cardElevation="0dp"
-            app:cardMaxElevation="0dp"
-            app:cardBackgroundColor="@android:color/transparent"
+            app:cardElevation=".5dp"
+            app:cardMaxElevation="5dp"
+            app:cardBackgroundColor="@android:color/white"
             tools:layout_marginLeft="20dp"
             tools:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
@@ -74,67 +74,58 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:id="@+id/prd_auction_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/lexend_deca"
-                        android:text="Primium"
-                        android:textSize="13dp" />
-
-                    <TextView
-                        android:id="@+id/prd_id"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/prd_auction_type"
-                        android:layout_marginTop="3dp"
-                        android:fontFamily="@font/lexend_deca"
-
-                        android:text="@{prdlist.prdId}"
-                        android:textSize="10dp" />
+                        android:fontFamily="@font/nanum_barun_gothic"
+                        android:text="프리미엄"
+                        android:textSize="15dp" />
 
                     <TextView
                         android:id="@+id/prd_totseqNm"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toRightOf="@id/prd_auction_type"
-                        android:layout_alignBottom="@id/prd_auction_type"
-                        android:layout_marginLeft="@dimen/dp_5"
-                        android:fontFamily="@font/lexend_deca"
+                        android:layout_below="@id/prd_auction_type"
+                        android:layout_marginTop="5dp"
+                        android:fontFamily="@font/nanum_barun_gothic"
                         android:text="주무뇌"
-                        android:textSize="10dp" />
+                        android:textSize="12dp" />
 
 
                     <TextView
                         android:id="@+id/auc_bid_txt"
-                        android:layout_width="40dp"
-                        android:layout_height="wrap_content"
-                        android:layout_alignTop="@+id/prd_auction_type"
-                        android:layout_toLeftOf="@id/auc_bid"
-                        android:text="낙찰가 : "
-                        android:textSize="10dp" />
-
-                    <TextView
-                        android:id="@+id/auc_bid"
-                        android:layout_width="40dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignTop="@+id/prd_auction_type"
                         android:layout_alignParentRight="true"
-                        android:layout_marginRight="@dimen/dp_15"
+                        android:layout_alignRight="@id/auc_bid"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="@dimen/dp_30"
+                        android:fontFamily="@font/nanum_barun_gothic"
+                        android:text="낙찰가"
+                        android:textSize="12dp" />
+
+                    <TextView
+                        android:id="@+id/auc_bid"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/prd_auction_type"
+                        android:layout_alignTop="@id/prd_totseqNm"
+                        android:layout_alignBottom="@id/prd_totseqNm"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="@dimen/dp_30"
+                        android:fontFamily="@font/lexend_deca"
                         android:text="@{prdlist.bidPrice + `₩ / KG`}"
-                        android:textSize="10dp" />
-
-
-
+                        android:textSize="12dp" />
 
 
                     <LinearLayout
                         android:id="@+id/expand_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/auc_bid"
+                        android:layout_below="@id/prd_totseqNm"
                         android:layout_alignStart="@id/prd_auction_type"
                         android:layout_marginTop="20dp"
                         android:dividerPadding="1dp"
-                        android:showDividers="middle"
                         android:orientation="vertical"
-                        >
+                        android:showDividers="middle">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -143,25 +134,57 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                             android:padding="14dp">
 
                             <LinearLayout
-                                android:layout_weight="1"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:orientation="horizontal">
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:fontFamily="@font/nanum_barun_gothic"
+                                    android:text="제품 ID : "
+                                    android:textSize="12dp" />
+
+                                <TextView
+                                    android:id="@+id/prd_id"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/nanum_barun_gothic"
+                                    android:text="@{prdlist.prdId}"
+                                    android:textSize="12dp" />
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:padding="14dp">
+
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/nanum_barun_gothic"
                                     android:text="제품 번호 : "
-                                    android:fontFamily="@font/lexend_deca"
-                                    android:textSize="13dp" />
+                                    android:textSize="12dp" />
 
                                 <TextView
                                     android:id="@+id/material_lotno"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:fontFamily="@font/nanum_barun_gothic"
                                     android:text="@{prdlist.prdNo}"
-                                    android:fontFamily="@font/lexend_deca"
-                                    android:textSize="13dp"/>
+                                    android:textSize="12dp" />
 
                             </LinearLayout>
 
@@ -174,50 +197,49 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                             android:padding="14dp">
 
                             <LinearLayout
-                                android:layout_weight="1"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:orientation="horizontal">
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:fontFamily="@font/nanum_barun_gothic"
                                     android:text="품명 : "
-                                    android:fontFamily="@font/lexend_deca"
-                                    android:textSize="13dp" />
+                                    android:textSize="12dp" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:fontFamily="@font/nanum_barun_gothic"
                                     android:text="@{prdlist.prdName}"
-                                    android:fontFamily="@font/lexend_deca"
-                                    android:textSize="13dp"/>
+                                    android:textSize="12dp" />
 
                             </LinearLayout>
 
                             <LinearLayout
-                                android:layout_weight="1"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:orientation="horizontal">
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:fontFamily="@font/nanum_barun_gothic"
                                     android:text="규격 : "
-                                    android:fontFamily="@font/lexend_deca"
-                                    android:textSize="13dp"/>
+                                    android:textSize="12dp" />
 
                                 <TextView
                                     android:id="@+id/prd_substspec"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:fontFamily="@font/lexend_deca"
+                                    android:fontFamily="@font/nanum_barun_gothic"
                                     android:text="@{prdlist.substSpec}"
-                                    android:textSize="13dp" />
+                                    android:textSize="12dp" />
                             </LinearLayout>
                         </LinearLayout>
-
 
 
                         <LinearLayout
@@ -227,77 +249,72 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                             android:padding="14dp">
 
                             <LinearLayout
-                                android:layout_weight="1"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:orientation="horizontal">
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:fontFamily="@font/nanum_barun_gothic"
                                     android:text="두께 : "
-                                    android:fontFamily="@font/lexend_deca"
-                                    android:textSize="13dp" />
+                                    android:textSize="12dp" />
 
                                 <TextView
                                     android:id="@+id/prd_prdthk"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:fontFamily="@font/nanum_barun_gothic"
                                     android:text="@{prdlist.prdThk.toString()}"
-                                    android:fontFamily="@font/lexend_deca"
-                                    android:textSize="13dp"/>
+                                    android:textSize="12dp" />
 
                             </LinearLayout>
 
                             <LinearLayout
-                                android:layout_weight="1"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:orientation="horizontal">
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:fontFamily="@font/nanum_barun_gothic"
                                     android:text="폭 : "
-                                    android:fontFamily="@font/lexend_deca"
-                                    android:textSize="13dp"/>
+                                    android:textSize="12dp" />
 
                                 <TextView
                                     android:id="@+id/prd_prdwth"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:fontFamily="@font/lexend_deca"
+                                    android:fontFamily="@font/nanum_barun_gothic"
                                     android:text="@{prdlist.prdWth.toString()}"
-                                    android:textSize="13dp" />
+                                    android:textSize="12dp" />
                             </LinearLayout>
 
                             <LinearLayout
-                                android:layout_weight="1"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:orientation="horizontal">
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:fontFamily="@font/nanum_barun_gothic"
                                     android:text="중량 : "
-                                    android:fontFamily="@font/lexend_deca"
-                                    android:textSize="13dp"/>
+                                    android:textSize="12dp" />
 
                                 <TextView
                                     android:id="@+id/prd_prdwgt"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:fontFamily="@font/lexend_deca"
+                                    android:fontFamily="@font/nanum_barun_gothic"
                                     android:text="@{prdlist.prdWgt.toString()}"
-                                    android:textSize="13dp" />
+                                    android:textSize="12dp" />
                             </LinearLayout>
                         </LinearLayout>
-
-
-
-
-
 
                     </LinearLayout>
 
@@ -308,7 +325,7 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                     android:layout_height="match_parent"
                     android:alpha="100"
                     android:background="@color/lblue30"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     tools:visibility="gone" />
 
             </FrameLayout>
