--- a/app/src/main/res/layout/item_home_banner_model.xml
+++ b/app/src/main/res/layout/item_home_banner_model.xml
@@ -5,31 +5,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-  <androidx.cardview.widget.CardView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_marginTop="10dp"
-      android:layout_marginHorizontal="10dp"
-      android:layout_marginBottom="30dp"
-      app:cardElevation="2dp"
-      app:cardBackgroundColor="@color/lblue60"
-      app:cardCornerRadius="20dp">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="배너입니다"
-        android:textColor="@color/white"
-        android:gravity="center"
-        android:textSize="@dimen/dp_20"/>
-
-  </androidx.cardview.widget.CardView>
-
-
-<!--  <com.esteel4u.realtimeauctionapp.view.utils.CornerImageView-->
-<!--      android:id="@+id/banner_image"-->
+<!--  <androidx.cardview.widget.CardView-->
 <!--      android:layout_width="match_parent"-->
 <!--      android:layout_height="match_parent"-->
-<!--      android:contentDescription="sdfsdf"-->
-<!--      android:scaleType="centerCrop" />-->
+<!--      android:layout_marginTop="10dp"-->
+<!--      android:layout_marginHorizontal="10dp"-->
+<!--      android:layout_marginBottom="30dp"-->
+<!--      app:cardElevation="2dp"-->
+<!--      app:cardBackgroundColor="@color/lblue60"-->
+<!--      app:cardCornerRadius="20dp">-->
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:text="배너입니다"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:gravity="center"-->
+<!--        android:textSize="@dimen/dp_20"/>-->
+
+<!--  </androidx.cardview.widget.CardView>-->
+
+
+  <com.esteel4u.realtimeauctionapp.view.utils.CornerImageView
+      android:id="@+id/banner_image"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:contentDescription="sdfsdf"
+      android:scaleType="centerCrop" />
 
 </RelativeLayout>
